--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -1,213 +1,142 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
+
 <head>
-     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>bosfor.ua</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <title>bosfor.ua</title>
 </head>
+
 <body>
-<div class="mainContainer">
+  <div class="mainContainer">
     <nav class="header">
-        <div class="container">
-            <div class="left-menu">
-                <a href="{% url 'home' %}">
-                    <img src="{% static 'img/logo.png' %}" alt="Logo" class="logo" />
-                </a>
-            </div>
-            <div class="right-menu">
-                <a href="#" class="menu-item">
-                    <i class="fas fa-headset"></i>
-                    <span>Служба підтримки</span>
-                </a>
-                <a href="#" class="menu-item">
-                    <i class="fas fa-user"></i>
-                    <span>Особистий кабінет</span>
-                </a>
-            </div>
+      <div class="container">
+        <div class="left-menu">
+          <a href="{% url 'home' %}">
+            <img src="{% static 'img/logo.png' %}" alt="Logo" class="logo" />
+          </a>
         </div>
+        <div class="right-menu">
+          <a href="#" class="menu-item">
+            <i class="fas fa-headset"></i>
+            <span>Служба підтримки</span>
+          </a>
+          <a href="#" class="menu-item">
+            <i class="fas fa-user"></i>
+            <span>Особистий кабінет</span>
+          </a>
+        </div>
+      </div>
     </nav>
 
-  <div class="main-wrapper  bg-primary">
+    <div class="main-wrapper  bg-primary">
       <div class="announcement-banner">
-          <div class="left-content">
-            <div class="banner-content">
-                  <span class="title-base banner-title">Busfor приєднується до BlaBlaCar</span>
-                  <span class="subtitle-base banner-subtitle">Такий самий широкий вибір автобусних поїздок.</span>
-                  <span class="subtitle-base banner-subtitle">Тепер доступний на BlaBlaCar</span>
-            </div>
+        <div class="left-content">
+          <div class="banner-content">
+            <span class="title-base banner-title">Busfor приєднується до BlaBlaCar</span>
+            <span class="subtitle-base banner-subtitle">Такий самий широкий вибір автобусних поїздок.</span>
+            <span class="subtitle-base banner-subtitle">Тепер доступний на BlaBlaCar</span>
           </div>
-          <div class="right-content">
-              <a href="#">
-                  <img src="{% static 'img/redirection-header-logo.svg' %}" alt="redirection-logo">
-              </a>
-          </div>
-      </div>
-
-      <div class=" form-section">
-          <form method="post">
-              {% csrf_token %}
-              <div class="form-fields">
-                {% for field in form %}
-                  <div class="form-row{% if forloop.first %} first{% endif %}">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors }}
-                  </div>
-                {% endfor %}
-              </div>
-              <div class="form-submit">
-                <div class="form-button-row">
-                  <button type="submit" class="btn btn-primary">🔍 Знайти квитки</button>
-                </div>
-              </div>
-          </form>
-      </div>
-  </div>
-
-    <div class="main-wrapper  showBlock">
-        <div class="form-fixed-top">
-          <form method="post">
-              {% csrf_token %}
-              <div class="form-fields">
-                {% for field in form %}
-                  <div class="form-row{% if forloop.first %} first{% endif %}">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors }}
-                  </div>
-                {% endfor %}
-              </div>
-              <div class="form-submit">
-                <div class="form-submit">
-                  <button type="submit" class="btn  btn-primar">🔍 Знайти квитки</button>
-                </div>
-              </div>
-          </form>
-    </div>
-
-        <div class="redirection-section">
-            <span class="section-title">Квитки на автобус</span>
-            <span class="section-subtitle">по Україні, Польщі та Європі</span>
         </div>
+        <div class="right-content">
+          <a href="#">
+            <img src="{% static 'img/redirection-header-logo.svg' %}" alt="redirection-logo">
+          </a>
+        </div>
+      </div>
+</div>
 
-          <div class="features-grid">
-              {% for item in features %}
-                <div class="feature-item">
-                  <img src="{% static item.icon %}" alt="Icon" class="logo-small" />
-                  <div>
-                    <span class="title-base feature-item-title">{{ item.title }}</span>
-                    <div class="subtitle-base feature-item-subtitle">{{ item.subtitle }}</div>
-                  </div>
-                </div>
-              {% endfor %}
-            </div>
 
-          <div class="about-section">
-            <div class="title-base section-title">Чому обирають Busfor</div>
-            <div class="about-feature">
-              {% for item in about %}
-                <div class="about-feature-item">
-                    <span class="title-base about-feature-title">{{ item.title }}</span>
-                    <span class="subtitle-base  about-feature-description">
-                        <p>{{ item.description|safe }}</p>
-                    </span>
-                </div>
-              {% endfor %}
-            </div>
+
+       {% block content %}
+    {% endblock %}
+
+
+
+    <div class="footer">
+      <div class="footer-partners">
+        <div class="partners-container">
+          <div class="partners__item ua-favorit">
+            <img
+              src="https://busfor.ua/assets/payment/ua-favorit-012d01a187748106ef283a89e2f8283ffee7359ec64ffe86a4028f819581a846.png">
           </div>
+          <div class="partners__item ua-prize">
+            <img
+              src="https://busfor.ua/assets/payment/ua-prize-593b379448d869e57d242bb039a1ef2402fa2440706cbf27c2939a03e8727929.png">
+          </div>
+          <div class="partners__item vuso">
+            <img
+              src="https://busfor.ua/assets/payment/vuso-7a6b2a883334689f42bc6a0509972e63e8319fdf5531c4f6c7a575773ba283bf.svg">
+          </div>
+          <div class="partners__item maestro">
+            <img
+              src="https://busfor.ua/assets/payment/maestro-9f0c09cb9be8dffba15d576cca4f0d6f6fc9f7968a22a2c50c310712d7864602.svg">
+          </div>
+          <div class="partners__item mastercard">
+            <img
+              src="https://busfor.ua/assets/payment/mastercard-d160f8e3585198a0dd65a7a3d49d858489536cd6969f1ec134dd38b2a4a82b35.svg">
+          </div>
+          <div class="partners__item visa">
+            <img
+              src="https://busfor.ua/assets/payment/visa-aa48a736f2aadd9c1b26b663f1dcb7de9af32490bf05fc4de878825735bf16eb.svg">
+          </div>
+        </div>
+      </div>
+      <div class="footer-dotua">
+        <div class="dotua-container">
+          <div class="dotua-container-row3">
+            {% for block in footer_blocks %}
+            <div class="dotua-container-col">
+              <h3>{{ block.title }}</h3>
 
-         <div class="routes-list">
-            {% for block in routes_blocks %}
-                <div class="routes-column">
-                    {% for item in block.items %}
-                        {% if block.type == 'list' %}
-                            <a class="title-base route-title">{{ item.title }}</a>
-                        {% elif block.type == 'pair' %}
-                            <a class="title-base route-title">{{ item.from_city }} &rarr; {{ item.to_city }}</a>
-                        {% endif %}
-                    {% endfor %}
-                </div>
+              {% for item in block.items %}
+              <a>{{ item.title }}</a>
+              {% endfor %}
+
+            </div>
             {% endfor %}
-        </div>
-    </div>
-
-   <div class="footer">
-        <div class="footer-partners">
-            <div class="partners-container">
-                <div class="partners__item ua-favorit">
-                    <img src="https://busfor.ua/assets/payment/ua-favorit-012d01a187748106ef283a89e2f8283ffee7359ec64ffe86a4028f819581a846.png">
-                </div>
-                <div class="partners__item ua-prize">
-                    <img src="https://busfor.ua/assets/payment/ua-prize-593b379448d869e57d242bb039a1ef2402fa2440706cbf27c2939a03e8727929.png">
-                </div>
-                <div class="partners__item vuso">
-                    <img src="https://busfor.ua/assets/payment/vuso-7a6b2a883334689f42bc6a0509972e63e8319fdf5531c4f6c7a575773ba283bf.svg">
-                </div>
-                <div class="partners__item maestro">
-                    <img src="https://busfor.ua/assets/payment/maestro-9f0c09cb9be8dffba15d576cca4f0d6f6fc9f7968a22a2c50c310712d7864602.svg">
-                </div>
-                <div class="partners__item mastercard">
-                    <img src="https://busfor.ua/assets/payment/mastercard-d160f8e3585198a0dd65a7a3d49d858489536cd6969f1ec134dd38b2a4a82b35.svg">
-                </div>
-                <div class="partners__item visa">
-                    <img src="https://busfor.ua/assets/payment/visa-aa48a736f2aadd9c1b26b663f1dcb7de9af32490bf05fc4de878825735bf16eb.svg">
-                </div>
-            </div>
-        </div>
-
-         <div class="footer-dotua">
-            <div class="dotua-container">
-                <div class="dotua-container-row3">
-                {% for block in footer_blocks %}
-                    <div class="dotua-container-col">
-                        <h3>{{ block.title }}</h3>
-
-                            {% for item in block.items %}
-                                    <a>{{ item.title }}</a>
-                            {% endfor %}
-
-                    </div>
+          </div>
+          <div class="dotua-container-row2">
+            {% for block in footer_blocks_img %}
+            <div class="dotua-container-col">
+              <h3>{{ block.title }}</h3>
+              <div class="dotua-container-col-img">
+                {% for item in block.items %}
+                <img src="{% static item.icon %}" alt="Icon" />
                 {% endfor %}
-                </div>
-                <div class="dotua-container-row2">
-                    {% for block in footer_blocks_img %}
-                    <div class="dotua-container-col">
-                        <h3>{{ block.title }}</h3>
-                        <div  class="dotua-container-col-img">
-                            {% for item in block.items %}
-                                  <img src="{% static item.icon %}" alt="Icon"  />
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% endfor %}
-                </div>
+              </div>
             </div>
+            {% endfor %}
+          </div>
         </div>
-  </div>
+      </div>
     </div>
 
 
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const formWrapperTop = document.querySelector('.form-fixed-top');
-    const wrapper = document.querySelector('.showBlock');
 
-    function checkPosition() {
-      const rect = wrapper.getBoundingClientRect();
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const formWrapperTop = document.querySelector('.form-fixed-top');
+      const wrapper = document.querySelector('.showBlock');
 
-     if (rect.top <= 0) {
-        formWrapperTop.classList.add('visible');
-      } else {
-        formWrapperTop.classList.remove('visible');
+      function checkPosition() {
+        const rect = wrapper.getBoundingClientRect();
+
+        if (rect.top <= 0) {
+          formWrapperTop.classList.add('visible');
+        } else {
+          formWrapperTop.classList.remove('visible');
+        }
       }
-    }
 
-    window.addEventListener('scroll', checkPosition);
-    window.addEventListener('resize', checkPosition);
-  });
-</script>
+      window.addEventListener('scroll', checkPosition);
+      window.addEventListener('resize', checkPosition);
+    });
+  </script>
 </body>
+
 </html>
