--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -532,6 +532,94 @@ body{
 }
 
 
+/* =============================
+    FORM SECTION
+   ============================= */
+.form-section-add-trip{
+  padding:  10px 0;
+  margin: 20px auto;
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top:20px;
+}
+
+
+.form-section-add-trip form {
+  display: flex;
+  flex:1;
+  width: 100%;
+  height: 60px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-fields-add-trip{
+ width: 100%;
+  height:100%;
+  display: flex;
+  background: var(--color-white);
+  border-radius: 3px;
+  gap: 5px;
+  box-sizing: border-box;
+}
+
+.form-row-add-trip {
+    max-width: 20%;
+    width: 20%;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+     justify-content: flex-start;
+    height: 60px;
+    border:1px solid grey;
+     padding: 5px 10px;
+}
+
+.form-row-add-trip  label {
+    margin-left:10px;
+    font-weight: 200;
+    margin-bottom: 5px;
+    color:grey;
+    font-size:14px;
+    margin-bottom: 4px;
+}
+
+.form-row-add-trip  select,
+.form-row-add-trip  input {
+
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    font-size: 14px;
+    border:none;
+}
+
+.form-button-row-add-trip{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-add-trip  {
+  background-color: var(--color-accent);
+  min-width:25%;
+  height:80px;;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.btn-add-trip :hover {
+  background-color: var(--color-accent-hover);
+}
+
+
+
 
 
 
