--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -624,6 +624,24 @@ body{
 
 
 
+/*=====================================
+
+=======================================*/
+.detail-trip{
+  width: 100%;
+  height:0;
+  background: white;
+  z-index: 1000;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+   height:70px;
+}
+
+
 
 
 
