--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -13,7 +13,7 @@
   --color-text-light: #b4b4b4;
   --color-error: #c0392b;
   --color-link-hover: #007acc;
-  --color-background: #e1e1e1;
+  --color-background: #f9f9f9;
   --color-subtext: #7f8c8d;
   --color-blue-heading: #2980b9;
   --color-orange: rgb(255, 132, 0);
