--- a/mainApp/templates/mainApp/search_tickets.html
+++ b/mainApp/templates/mainApp/search_tickets.html
@@ -1,7 +1,28 @@
 {% extends "mainApp/base.html" %}
 {% load static %}
 {% block content %}
-<div class="main-wrapper search-tickets-section " xmlns="http://www.w3.org/1999/html">
+ <div class="main-wrapper  bg-primary">
+      <div class=" form-section">
+        <form method="post">
+          {% csrf_token %}
+          <div class="form-fields">
+            {% for field in form %}
+            <div class="form-row{% if forloop.first %} first{% endif %}">
+              {{ field.label_tag }}
+              {{ field }}
+              {{ field.errors }}
+            </div>
+            {% endfor %}
+          </div>
+          <div class="form-submit">
+            <div class="form-button-row">
+              <button type="submit" class="btn btn-primary">🔍 Знайти квитки</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+<div class="main-wrapper search-tickets-section ">
   <div class="title-base search-tickets-subtitle">Квитки на автобус</div>
   <div class="title-base search-tickets-title">{{ from_city}} -> {{to_city}}</div>
   <div class="search-tickets-info-container">
